# GNDStk

./: .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  README.md
.github/workflows/: ContinuousIntegration.yml
autogen/: .gitignore  changes.json  generalPurpose.json  json2class-c.cpp  json2class-cpp.cpp  json2class-f03.cpp  json2class-fun.cpp  json2class-map.cpp  json2class-new.cpp  json2class-python.cpp  json2class-struct.cpp  json2class-writer.cpp  json2class.cpp  prototype-new.json  prototype.json  reactionSuite.json  v1.9.json
autogen/prototype/: .gitignore  generalPurpose.json  prototype.json  reactionSuite.json
autogen/simple/: .gitignore  clean  compile-c  compile-cpp  example-01.c  example-01.cpp  example-02.cpp  example.c  example.cpp  multi-classes.json  multi.json
autogen/v1.9/: readme  summary_appData.json  summary_atomic.json  summary_basic.json  summary_common.json  summary_containers.json  summary_covariance.json  summary_cpTransport.json  summary_documentation.json  summary_fissionTransport.json  summary_fpy.json  summary_pops.json  summary_resonance.json  summary_styles.json  summary_tsl.json  v1.9.json
c/src/: GNDStk.cpp  GNDStk.h
cmake/: GNDStk_dependencies.cmake  unit_testing.cmake
docs/: Makefile  advanced.rst  base.rst  bash-build-script.sh  basic.rst  build.rst  class.rst  color.rst  conf.py  convert.rst  core.rst  create.rst  field.rst  function.rst  genindex.rst  high.rst  index.rst  intro.rst  io.rst  main.rst  make.bat  motive.rst  node-call.cc  node-child-call.cc  node-meta-call.cc  node-multi.cc  node.rst  primer.rst  python.rst  query1.rst  query2.rst  quick.rst  ref-comp.rst  ref-convert.rst  ref-core.rst  ref-high.rst  ref-io.rst  ref-keywords.rst  ref-misc.rst  ref-node.rst  (+6 more)
docs/.static/: color.css  default.css
docs/tutorial/: basic-read-2.cpp  basic-read-json.cpp  basic-read.cpp  basic-rw.cpp  core-only.hpp  core-using.hpp  employees.cpp  employees.json  employees.xml  evaluated-node.xml  file-types.hpp  main-namespaces.hpp  mass-double-fragment.xml  minimal-recommended.cpp  minimal.cpp  node-data-brief.hpp  node-data.hpp  rw-compare.cpp  rw-xml-json-2.cpp  rw-xml-json.cpp  tree-and-node.hpp  tree-v-node.cpp  xml-axes-fragment.xml  xml-values-fragment.xml
formats/: readme  summary_abstract.json  summary_atomic.json  summary_basic.json  summary_common.json  summary_containers.json  summary_covariance.json  summary_documentation.json  summary_fissionTransport.json  summary_fpy.json  summary_gpdc.json  summary_pops.json  summary_processed.json  summary_resonance.json  summary_styles.json  summary_transport.json  summary_tsl.json
formats/v1.9/: readme  summary_abstract.json  summary_appData.json  summary_atomic.json  summary_basic.json  summary_common.json  summary_containers.json  summary_covariance.json  summary_cpTransport.json  summary_documentation.json  summary_fissionTransport.json  summary_fpy.json  summary_pops.json  summary_processed.json  summary_resonance.json  summary_styles.json  summary_transport.json  summary_tsl.json
json/: gnds.json  j.cc
metaconfigure/: configuration.py  description.json
python/: .gitignore  runtests.sh
python/src/: BoundaryCondition.python.cpp  ContributorType.python.cpp  DateType.python.cpp  (+12 more)
sandbox/: .gitignore  collate.cc  collate.cpp  collate.sh  compile-clang++  compile-g++  gnds.cc  gnds.cpp  gnds.hpp  keyword.hpp
src/: GNDStk.hpp
src/GNDStk/BlockData/test/: BlockData.test.cpp  CMakeLists.txt  assign.test.cpp  convert.test.cpp  detail.test.cpp  fromNode.test.cpp  get.test.cpp  params.test.cpp  print.test.cpp  string.test.cpp  sync.test.cpp  toNode.test.cpp  types.test.cpp  write.test.cpp
src/GNDStk/BodyText/test/: BodyText.test.cpp  CMakeLists.txt  assign.test.cpp  detail.test.cpp  fromNode.test.cpp  get.test.cpp  params.test.cpp  string.test.cpp  sync.test.cpp  toNode.test.cpp  types.test.cpp  write.test.cpp
src/GNDStk/Child/test/: CMakeLists.txt  Child.test.cpp  operator.test.cpp
src/GNDStk/Component/test/: CMakeLists.txt  Component.test.cpp  ctor.test.cpp  detail.test.cpp  finish.test.cpp  fromNode.test.cpp  getter.test.cpp  indexnlabel.hpp  print.test.cpp  prototype.hpp  sort.test.cpp  toNode.test.cpp  write.test.cpp
src/GNDStk/Component/test/resources/: n-001_H_002.xml
src/GNDStk/Defaulted/test/: CMakeLists.txt  Defaulted.test.cpp  assign.test.cpp  ctor.test.cpp  get.test.cpp  has.test.cpp  reset.test.cpp  value.test.cpp
src/GNDStk/HDF5/test/: CMakeLists.txt  HDF5.test.cpp  detail.test.cpp
src/GNDStk/HDF5/test/resources/: correct-raw-string.h5  correct-raw-typed.h5  correct-reduced-string.h5  correct-reduced-typed.h5  n-069_Tm_170-covar.h5  various.xml
src/GNDStk/Node/test/: CMakeLists.txt  Node.test.cpp  add.test.cpp  all.test.cpp  assign.test.cpp  call.test.cpp  child.test.cpp  clear.test.cpp  compare.test.cpp  copy.test.cpp  count.test.cpp  ctor.test.cpp  empty.test.cpp  has.test.cpp  many.test.cpp  meta.test.cpp  node.test.cpp  one.test.cpp  shuffle.test.cpp  sort.test.cpp  special.test.cpp  subscript.test.cpp  write.test.cpp
src/GNDStk/Tree/test/: CMakeLists.txt  Tree.test.cpp  all.test.cpp  assign.test.cpp  call.test.cpp  child.test.cpp  clear.test.cpp  ctor.test.cpp  decl.test.cpp  empty.test.cpp  many.test.cpp  meta.test.cpp  normalize.test.cpp  one.test.cpp  read.test.cpp  reset.test.cpp  root.test.cpp  special.test.cpp  top.test.cpp  tree.test.cpp  write.test.cpp
src/GNDStk/child/test/: CMakeLists.txt  child.test.cpp
src/GNDStk/enums/units/Length/test/: CMakeLists.txt  Length.test.cpp
src/GNDStk/generic/Node/test/: CMakeLists.txt  Node.test.cpp
src/GNDStk/generic/test/: CMakeLists.txt  generic.test.cpp
src/GNDStk/meta_t/test/: CMakeLists.txt  meta.test.cpp  meta_t.test.cpp  operator.test.cpp
src/GNDStk/node2type/test/: CMakeLists.txt  node2type.test.cpp
src/GNDStk/nodes/Axes/test/: Axes.test.cpp  CMakeLists.txt
src/GNDStk/nodes/Values/test/: CMakeLists.txt  Values.test.cpp
src/GNDStk/test/: CMakeLists.txt  GNDStk.test.cpp  fromXML.test.cpp  keys.hpp
src/GNDStk/type2string/test/: CMakeLists.txt  type2string.test.cpp
(+9688 files in other folders)
